@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+  - 02-02-2005 added: Profile overwrite + context menu in profilewindow for overwrite/rename/delete.
   - 01-02-2005 added: mplayer support for new system\players directory structure, enable Alternate mplayer core in settings to use it.
                       Requires new compiled mplayer.dll, old dll's still needs to be in old mplayer dir.
   - 01-02-2005 fixed: [ 1113362 ] Selecting "All songs" in Artist view takes awfully long time
